<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Discoteca</string>

    <string name="a_answer">Une question</string>
    <string name="a_disc">Un disque</string>
    <string name="a_drive_user">Un user Drive</string>
    <string name="a_menu">Un menu</string>
    <string name="add_disc">Ajouter un disque</string>
    <string name="add_disc_img">Ajout d\'un disque</string>
    <string name="app_version">Version : </string>
    <string name="add">Ajouter</string>
    <string name="answer_add">Voulez-vous ajouter &#63;</string>
    <string name="answer_add_still">Voulez-vous quand même ajouter &#63;</string>
    <string name="answer_back_up">Voulez-vous sauvegarder &#63;</string>
    <string name="answer_delete">Voulez-vous supprimer &#63;</string>
    <string name="answer_disc_present">Votre disque est-il présent &#63;</string>
    <string name="answer_good_disc">C\'est bien votre disque &#63;</string>
    <string name="answer_info_correct">Les informations sont-elles correctes &#63;</string>
    <string name="answer_modify">Voulez-vous modifier &#63;</string>
    <string name="answer_restore">Voulez-vous restaurer &#63;</string>
    <string name="answer_search">Voulez-vous faire une recherche pour ce disque &#63;</string>
    <string name="answer_search_still">Voulez-vous quand même faire une recherche &#63;</string>
    <string name="answer_update">Voulez-vous actualiser &#63;</string>
    <string name="artist_group_name">Nom du groupe/artiste</string>
    <string name="artist_group_name_hint"><i>Nom du groupe/artiste</i></string>
    <string name="back">Retour</string>
    <string name="back_up">Sauvegarder</string>
    <string name="back_up_present_in_drive">Une sauvegarde est présente dans votre Drive</string>
    <string name="barcode">code barre</string>
    <string name="by_name_artist_group">Par artiste/groupe</string>
    <string name="by_title">Par titre</string>
    <string name="by_year">Par année</string>
    <string name="cancel">Annuler</string>
    <string name="catalog">Discoteca</string>
    <string name="choose_disc">Choisissez votre disque</string>
    <string name="dark">Mode sombre</string>
    <string name="database_back_up">Sauvegardé !</string>
    <string name="database_not_restored">Non restauré !</string>
    <string name="database_restored">Restauré !</string>
    <string name="delete">Supprimer</string>
    <string name="delete_caps">SUPPRIMER</string>
    <string name="detail">Détails</string>
    <string name="disc_add_scan">Disque ajouté via le scan</string>
    <string name="disc_add_search">Disque ajouté via la recherche</string>
    <string name="disc_add_manually">Disque ajouté manuellement</string>
    <string name="disc_add_present">Voulez-vous ajouter &#63;\n\n%1$s</string>
    <string name="disc_add_scan_example">Disque ajouté via le scan</string>
    <string name="disc_added">Disque ajouté !</string>
    <string name="disc_already_present_one">Disque déjà présent !</string>
    <string name="disc_already_present_more">Disques déjà présents !</string>
    <string name="disc_api_barcode_example">1 résultat pour</string>
    <string name="disc_artist_title">Artist - Title</string>
    <string name="disc_barcode">1234567891011</string>
    <string name="disc_card_transition_name">disc_card_%1$s</string>
    <string name="disc_count_example">1</string>
    <string name="disc_count_media_example">CD DVD</string>
    <string name="disc_country_year_example">France - 1982</string>
    <string name="disc_deleted">Disque supprimé !</string>
    <string name="disc_detail_card_transition_name">disc_detail_card</string>
    <string name="disc_format">Format</string>
    <string name="disc_format_media_example">CD Vinyl DVD Box Set</string>
    <string name="disc_interaction_message_empty_unable_to_restore">Aucun disque\nIl n\'est pas possible d\'effectuer une sauvegarde</string>
    <string name="disc_modified">Disque modifié !</string>
    <string name="disc_name">Nom</string>
    <string name="disc_nb_present_manually_example">Il y a 1 disque dans Discoteca, ajouté manuellement</string>
    <string name="disc_nb_present_scan_example">Il y a 1 disque dans Discoteca, ajouté via le scan</string>
    <string name="disc_nb_present_search_example">Il y a 1 disque dans Discoteca, ajouté via la recherche</string>
    <string name="disc_nb_present_discoteca_example">1 disque trouvé dans Discoteca</string>
    <string name="disc_not_added">Disque non ajouté !</string>
    <string name="disc_not_found_message_api">Aucun disque trouvé avec ce code barre</string>
    <string name="disc_not_found_message_database">Aucun disque présent dans Discoteca avec ce code barre</string>
    <string name="disc_present_manually">Disque présent dans Discoteca, ajouté manuellement</string>
    <string name="disc_present_scan">Disque présent dans Discoteca, ajouté via le scan</string>
    <string name="disc_present_search">Disque présent dans Discoteca, ajouté via la recherche</string>
    <string name="disc_recommendation_no_connected">Il semblerait que vous êtes hors connexion\nVeuillez vérifier votre accès à Internet\n\nVous pouvez ajouter le disque manuellement\n\nRefaire le scan</string>
    <string name="disc_recommendation_api">Vous pouvez refaire le scan si erreur de lecture du code barre\n\nAjouter le disque manuellement\n\nEffectuer une recherche</string>
    <string name="disc_recommendation_database">Vous pouvez refaire le scan si erreur de lecture du code barre\n\nFaire une recherche manuelle dans Discoteca</string>
    <string name="disc_result_card_transition_name">disc_result_card_%1$d</string>
    <string name="disc_result_detail_card_transition_name">disc_result_detail_card</string>
    <string name="disc_search_barcode_example">1 disque dans Discoteca avec ce code barre :</string>
    <string name="disc_search_present">Voulez-vous faire une recherche &#63;\n\n%1$s</string>
    <string name="disc_updated">Disque mis à jour !</string>
    <string name="disc_title">Titre</string>
    <string name="disc_title_hint"><i>Titre</i></string>
    <string name="disc_year">Année</string>
    <string name="disc_year_example">1982</string>
    <string name="disc_year_release">Année de parution</string>
    <string name="disc_year_release_hint"><i>Année de parution</i></string>
    <string name="disconnect">Déconnecter</string>
    <string name="error_message">Oh Nooo, nous avons une erreur\n\nVeuillez réessayez ultérieurement</string>
    <string name="error_message_scan">Vous pouvez ajouter le disque manuellement\n\nEffectuer une recherche\n\nEffectuer un scan</string>
    <string name="error_message_search">Vous pouvez ajouter le disque manuellement\n\nEffectuer une recherche</string>
    <string name="error_result_message">Oh Nooo, nous avons une erreur : \n%s</string>
    <string name="error_result_message_retry">Oh Nooo, nous avons une erreur : \n%s\n\nVeuillez réessayez ultérieurement</string>
    <string name="error_result_message_unknown">Oh Nooo, nous avons une erreur inconnue</string>
    <string name="error_result_message_unknown_retry">Oh Nooo, nous avons une erreur inconnue\n\nVeuillez réessayez ultérieurement</string>
    <string name="error_result_recommendation_no_connected">Il semblerait que vous êtes hors connexion\nVeuillez vérifier votre accès à Internet\n\n%s</string>
    <string name="error_no_back_up_in_drive">Erreur : pas de sauvegarde dans votre Drive</string>
    <string name="error_no_back_up_in_drive_unable_to_restore" tools:ignore="Typos">Erreur : pas de sauvegarde dans votre Drive\nIl n\'est pas possible de faire une restauration</string>
    <string name="google_drive_authorization_message">Pour le bon fonctionnement de l\'application :\nVeuillez autoriser Discoteca à consulter, modifier, créer et supprimer
        uniquement les fichiers Google Drive spécifiques que vous utilisez avec cette application</string>
    <string name="grid">Grille</string>
    <string name="hyphen">-</string>
    <string name="img_catalog">Catalogue</string>
    <string name="img_disc">Un disque</string>
    <string name="img_google_drive">Google Drive</string>
    <string name="img_no_connect">Pas d\'internet</string>
    <string name="img_status_scan">Statut scan</string>
    <string name="indicate_artist_group_name">Indiquer le nom du groupe/artiste</string>
    <string name="indicate_title_disc">Indiquer le titre du disque</string>
    <string name="indicate_year_disc">Indiquer l\'année de parution</string>
    <string name="information">Informations</string>
    <string name="information_artist_message">Si votre disque est une compilation de groupe/artiste\n\nVous pouvez mettre Various</string>
    <string name="information_year_message">Vous trouverez l\'année de parution après le &#x24D2; sur la pochette au verso ou sur le disque\n\n&#x24DF; &#x26; &#x24D2; 1982\n&#x24DF; 1982 &#x26; &#x24D2; 1986</string>
    <string name="important_interaction_message">L\'application crée un dossier nommé MyDatabaseDiscotecaApp dans votre Drive lié au compte GMail sélectionné pour enregister votre sauvegarde.
        \nPour le bon fonctionnement de l\'application, il est conseillé de ne pas toucher ce dossier</string>
    <string name="interaction">Interactions</string>
    <string name="last_back_up">Dernière sauvegarde</string>
    <string name="last_restore" tools:ignore="Typos">Dernière restauration</string>
    <string name="light">Mode clair</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="manually">Manuellement</string>
    <string name="match_disc_error">Oh Nooo\nNous avons une erreur !</string>
    <string name="match_disc_found">Match Groove\nDisque trouvé !</string>
    <string name="match_disc_found_list_result">Match Groove\nRésultats</string>
    <string name="match_disc_not_found">Oh Nooo\nDisque non trouvé !</string>
    <string name="match_groove_example">Match Groove\n1 Résultat</string>
    <string name="media">Media</string>
    <string name="media_undefined">Media non défini</string>
    <string name="modify">Modifier</string>
    <string name="modify_caps">MODIFIER</string>
    <string name="nb_disc_discoteca_example">1 disque</string>
    <string name="no">Non</string>
    <string name="noDisplay">noDisplay</string>
    <string name="no_back_up_in_drive">Pas de sauvegarde dans votre Drive</string>
    <string name="no_connected">Vous êtes hors-connexion</string>
    <string name="no_connect_message">Il semblerait que vous êtes hors-connexion\n\nVeuillez vérifier votre accès à Internet</string>
    <string name="no_disc">Aucun disque</string>
    <string name="no_disc_recommendation">Vous pouvez faire un scan\n\nAjouter le disque manuellement\n\nFaire une recherche</string>
    <string name="no_restore_done" tools:ignore="Typos">Pas de restauration effectuée</string>
    <string name="no_result_barcode">Aucun résultat avec ce code barre</string>
    <string name="no_scan_result_recommendation">Vous pouvez ajouter le disque manuellement\n\nEffectuer une recherche</string>
    <string name="no_search_result">Aucun résultat</string>
    <string name="no_search_result_recommendation">Vous pouvez ajouter le disque manuellement\n\nFaire une nouvelle recherche</string>
    <string name="no_valid_year">Année non valide</string>
    <string name="not_specified">Non renseigné</string>
    <string name="ok">OK</string>
    <string name="permission_camera_denied_message">L\'application a besoin de l\'autorisation pour l\'appareil photo
        afin d\'utiliser le lecteur de code barre</string>
    <string name="permission_camera_rationale_body">Il n\'est pas possible d\'utiliser le lecteur
        de code barre sans autorisation pour l\'appareil photo</string>
    <string name="permission_denied_title">Autorisation non acceptée</string>
    <string name="please_sign_in">Veuillez-vous connecter</string>
    <plurals name="plural_nb_disc_discoteca">
        <item quantity="one">%1$d disque</item>
        <item quantity="other">%1$d disques</item>
    </plurals>
    <plurals name="plural_nb_disc_found">
        <item quantity="one">Match Groove\n%1$d résultat</item>
        <item quantity="other">Match Groove\n%1$d résultats</item>
    </plurals>
    <plurals name="plural_nb_disc_present_discoteca">
        <item quantity="one">%1$d résultat dans Discoteca</item>
        <item quantity="other">%1$d résultats dans Discoteca</item>
    </plurals>
    <plurals name="plural_nb_disc_present_manually">
        <item quantity="one">Il y a %1$d disque dans Discoteca, ajouté manuellement</item>
        <item quantity="other">Il y a %1$d disques dans Discoteca, ajoutés manuellement</item>
    </plurals>
    <plurals name="plural_nb_disc_present_scan">
        <item quantity="one">Il y a %1$d disque dans Discoteca, ajouté via le scan</item>
        <item quantity="other">Il y a %1$d disques dans Discoteca, ajoutés via le scan</item>
    </plurals>
    <plurals name="plural_nb_disc_present_search">
        <item quantity="one">Il y a %1$d disque dans Discoteca, ajouté via la recherche</item>
        <item quantity="other">Il y a %1$d disques dans Discoteca, ajoutés via la recherche</item>
    </plurals>
    <plurals name="plural_total_database_result">
        <item quantity="one">%1$d résultat dans Discoteca pour</item>
        <item quantity="other">%1$d résultats dans Discoteca pour</item>
    </plurals>
    <plurals name="plural_nb_disc_api_search_barcode">
        <item quantity="one">%1$d résultat pour</item>
        <item quantity="other">%1$d résultats pour</item>
    </plurals>
    <plurals name="plural_total_api_result">
        <item quantity="one">%1$d résultat pour</item>
        <item quantity="other">%1$d résultats pour</item>
    </plurals>
    <string name="restore">Restaurer</string>
    <string name="retry">Réessayer</string>
    <string name="scan">Scan</string>
    <string name="scan_the_barcode">Scanner le code barre</string>
    <string name="search">Rechercher</string>
    <string name="search_discoteca_scan_barcode">Rechercher avec le scan du code barre</string>
    <string name="search_hint">Rechercher…</string>
    <string name="search_result_example">1 résultat pour</string>
    <string name="sign_in_recommendation">Veuillez-vous connecter pour utiliser Google Drive</string>
    <string name="sign_in_unexpected_error">Une erreur inattendue est arrivée\nVeuillez recommencer</string>
    <string name="sort">Trier</string>
    <string name="system_default">Par défaut</string>
    <string name="theme">Thème</string>
    <string name="undefined">Non défini</string>
    <string name="update">Actualiser</string>
    <string name="yes">Oui</string>
</resources>