<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/discFragment">

    <fragment
        android:id="@+id/discFragment"
        android:name="com.diego.discoteca.ui.disc.DiscFragment"
        android:label="@string/catalog"
        tools:layout="@layout/fragment_disc">
...
        <action
            android:id="@+id/action_discFragment_to_scanBarcodeFragment"
            app:destination="@id/scanBarcodeFragment" />

        <action
            android:id="@+id/action_discFragment_to_updateDiscFragment"
            app:destination="@id/updateDiscFragment" />

        <argument
            android:name="uiText"
            app:argType="com.diego.discoteca.util.UIText"
            app:nullable="true"
            android:defaultValue="@null" />
...
