...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_year"
                    tools:text="@string/disc_year_example" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_yes"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="72dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/yes"
...
